- Updated the structure and added some comments to the FCNet class methods

--- a/FullyConnectedNet/FullyConnectedNet.vcxproj
+++ b/FullyConnectedNet/FullyConnectedNet.vcxproj
@@ -149,6 +149,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ActivationFunction.h" />
     <ClInclude Include="FCNet.h" />
     <ClInclude Include="IO_Manager.h" />
     <ClInclude Include="stdafx.h" />
