--- a/FullyConnectedNet/FullyConnectedNet.vcxproj.filters
+++ b/FullyConnectedNet/FullyConnectedNet.vcxproj.filters
@@ -36,6 +36,15 @@
     <ClInclude Include="ActivationFunction.h">
       <Filter>Activation Functions</Filter>
     </ClInclude>
+    <ClInclude Include="ReLU_FCN.h">
+      <Filter>Activation Functions</Filter>
+    </ClInclude>
+    <ClInclude Include="Sigmoid_FCN.h">
+      <Filter>Activation Functions</Filter>
+    </ClInclude>
+    <ClInclude Include="Tanh_FCN.h">
+      <Filter>Activation Functions</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -49,6 +58,15 @@
     </ClCompile>
     <ClCompile Include="FCNet.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Sigmoid_FCN.cpp">
+      <Filter>Activation Functions</Filter>
+    </ClCompile>
+    <ClCompile Include="Tanh_FCN.cpp">
+      <Filter>Activation Functions</Filter>
+    </ClCompile>
+    <ClCompile Include="ReLU_FCN.cpp">
+      <Filter>Activation Functions</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
